--- a/charts/sftpgo/values.yaml
+++ b/charts/sftpgo/values.yaml
@@ -102,6 +102,9 @@ serviceAccount:
 # -- Annotations to be added to pods.
 podAnnotations: {}
 
+# Additional Pod labels
+podLabels: {}
+
 # -- Pod [security context](https://kubernetes.io/docs/tasks/configure-pod-container/security-context/#set-the-security-context-for-a-pod).
 # See the [API reference](https://kubernetes.io/docs/reference/kubernetes-api/workload-resources/pod-v1/#security-context) for details.
 podSecurityContext: {}
