fix(charts/tusd): Allow setting -verbose=false

--- a/charts/tusd/templates/deployment.yaml
+++ b/charts/tusd/templates/deployment.yaml
@@ -47,7 +47,7 @@ spec:
             - "-port"
             - "1080"
           {{- range .Values.containerArgs }}
-            - {{ . }}
+            - {{ . | quote }}
           {{- end }}
           {{- with .Values.env }}
           env:
