--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -1,27 +1,27 @@
-chart/browserless-chrome:
+browserless-chrome:
   - changed-files:
     -  any-glob-to-any-file: 'charts/browserless-chrome/**/*'
 
-chart/caddy:
+caddy:
   - changed-files:
     -  any-glob-to-any-file: 'charts/caddy/**/*'
 
-chart/dex-k8s-authenticator:
+dex-k8s-authenticator:
   - changed-files:
     -  any-glob-to-any-file: 'charts/dex-k8s-authenticator/**/*'
 
-chart/kube-secrets-init:
+kube-secrets-init:
   - changed-files:
     -  any-glob-to-any-file: 'charts/kube-secrets-init/**/*'
 
-chart/rabbitmq-operator:
+rabbitmq-operator:
   - changed-files:
     -  any-glob-to-any-file: 'charts/rabbitmq-operator/**/*'
 
-chart/sftpgo:
+sftpgo:
   - changed-files:
     -  any-glob-to-any-file: 'charts/sftpgo/**/*'
 
-chart/tusd:
+tusd:
   - changed-files:
     -  any-glob-to-any-file: 'charts/tusd/**/*'
