--- a/charts/sftpgo/templates/deployment.yaml
+++ b/charts/sftpgo/templates/deployment.yaml
@@ -127,6 +127,10 @@ spec:
               mountPath: /etc/sftpgo/sftpgo.json
               subPath: sftpgo.json
               readOnly: true
+          {{- if .Values.persistence.enabled }}
+            - mountPath: /var/lib/sftpgo
+              name: sftpgo-volume
+          {{- end }}
           {{- with .Values.volumeMounts }}
             {{- toYaml . | nindent 12 }}
           {{- end }}
@@ -134,6 +138,11 @@ spec:
         - name: config
           configMap:
             name: {{ include "sftpgo.fullname" . }}
+      {{- if .Values.persistence.enabled }}
+        - name: sftpgo-volume
+          persistentVolumeClaim:
+            claimName: {{ include "sftpgo.fullname" . }}-pvc
+      {{- end }}
       {{- with .Values.volumes }}
         {{- toYaml . | nindent 8 }}
       {{- end }}
