--- a/charts/sftpgo/templates/pvc.yaml
+++ b/charts/sftpgo/templates/pvc.yaml
@@ -3,8 +3,8 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   finalizers:
-  - kubernetes.io/pvc-protection
-  name: {{ include "sftpgo.fullname" . }}-pvc
+    - kubernetes.io/pvc-protection
+  name: {{ include "sftpgo.fullname" . }}
   labels:
     {{- include "sftpgo.labels" . | nindent 4 }}
 spec:
