--- a/charts/sftpgo/values.yaml
+++ b/charts/sftpgo/values.yaml
@@ -101,14 +101,12 @@ podSecurityContext:
 
 # -- Container [security context](https://kubernetes.io/docs/tasks/configure-pod-container/security-context/#set-the-security-context-for-a-container).
 # See the [API reference](https://kubernetes.io/docs/reference/kubernetes-api/workload-resources/pod-v1/#security-context-1) for details.
-securityContext:
+securityContext: {}
   # capabilities:
   #   drop:
   #   - ALL
   # readOnlyRootFilesystem: true
   # runAsNonRoot: true
-  runAsUser: 1000  # User ID under which your app runs
-  runAsGroup: 1000  # Group ID under which your app runs
 
 # -- Add [init containers](https://kubernetes.io/docs/concepts/workloads/pods/init-containers/) to the pod.
 initContainers: []
@@ -291,14 +289,14 @@ topologySpreadConstraints:
   # -- How to deal with a Pod if it doesn't satisfy the spread constraint.
   whenUnsatisfiable: DoNotSchedule
 
-# -- Enable persistent storage for the /var/lib/sftpgo directory, saving state of a memory db.
 persistence:
+  # -- Enable persistent storage for the /var/lib/sftpgo directory, saving state of a memory db.
   enabled: false
 
   # -- Create the pvc desired specificiation.
   pvc:
     accessModes:
-    - ReadWriteOnce
+      - ReadWriteOnce
     resources:
       requests:
         storage: 5Gi
