updating and regnerating readme from make docs

--- a/charts/sftpgo/values.yaml
+++ b/charts/sftpgo/values.yaml
@@ -290,7 +290,7 @@ topologySpreadConstraints:
   whenUnsatisfiable: DoNotSchedule
 
 persistence:
-  # -- Enable persistent storage for the /var/lib/sftpgo directory, saving state of a memory db.
+  # -- Enable persistent storage for the /var/lib/sftpgo directory, saving state of the default sqlite db.
   enabled: false
 
   # -- Create the pvc desired specificiation.
