--- a/charts/sftpgo/values.yaml
+++ b/charts/sftpgo/values.yaml
@@ -44,7 +44,7 @@ httpd:
   enabled: true
 
 # -- Application configuration.
-# See the [official documentation](https://github.com/drakkan/sftpgo/blob/master/docs/full-configuration.md).
+# See the [official documentation](https://docs.sftpgo.com/latest/config-file/).
 config: {}
 
 # -- Additional storage [volumes](https://kubernetes.io/docs/concepts/storage/volumes/).
