--- a/charts/sftpgo/Chart.yaml
+++ b/charts/sftpgo/Chart.yaml
@@ -1,7 +1,7 @@
 apiVersion: v2
 type: application
 name: sftpgo
-version: 0.23.0
+version: 0.23.1
 appVersion: 2.5.4
 kubeVersion: ">=1.16.0-0"
 description: Fully featured and highly configurable SFTP server with optional FTP/S and WebDAV support.
@@ -21,6 +21,8 @@ annotations:
   artifacthub.io/changes: |
     - kind: changed
       description: Add deployment annotations
+    - kind: fixed
+      description: Fixed instructions in NOTES.TXT to forward correct ports. Made clearer for first usage.
   artifacthub.io/images: |
     - name: sftpgo
       image: ghcr.io/drakkan/sftpgo:v2.5.4
