chore: add podLabels to deployment - This updates the Chart to 0.0.5 and adds to ability to specify pod labels for the deployment, similar to what's already there for annotations.

--- a/charts/browserless-chrome/templates/deployment.yaml
+++ b/charts/browserless-chrome/templates/deployment.yaml
@@ -18,6 +18,9 @@ spec:
         {{- toYaml . | nindent 8 }}
       {{- end }}
       labels:
+        {{- with .Values.podLabels }}
+          {{- toYaml . | nindent 8 }}
+        {{- end }}
         {{- include "browserless-chrome.selectorLabels" . | nindent 8 }}
     spec:
       {{- with .Values.imagePullSecrets }}
